--- a/StockManager/Views/TailorChalan/Details.cshtml
+++ b/StockManager/Views/TailorChalan/Details.cshtml
@@ -78,33 +78,34 @@
                     <tr>
                         <td></td>
                         <td>
-                            <table class="table">
-                                <tr>
-                                    <th colspan="2"> Material Details</th>
-                                </tr>
-                                <tr>
-                                    <th>
-                                        Product
-                                    </th>
-                                    <th>
-                                        Quantity
-                                    </th>
-                                </tr>
-                                @if (item.TailorMaterialDetails != null)
-                                {
-                                    foreach (var material in item.TailorMaterialDetails)
+                            @if (item.TailorMaterialDetails != null && item.TailorMaterialDetails.Count>0)
+                            {
+                                <table class="table">
+                                    <tr>
+                                        <th colspan="2"> Material Details</th>
+                                    </tr>
+                                    <tr>
+                                        <th>
+                                            Product
+                                        </th>
+                                        <th>
+                                            Quantity
+                                        </th>
+                                    </tr>
+                                    @foreach (var material in item.TailorMaterialDetails)
                                     {
-                                        <tr>
-                                            <th>
-                                                @Html.DisplayFor(p => material.Product.ProductName)
-                                            </th>
-                                            <th>
-                                                @Html.DisplayFor(p => material.Quantity)
-                                            </th>
-                                        </tr>
+                                    <tr>
+                                        <th>
+                                            @Html.DisplayFor(p => material.Product.ProductName)
+                                        </th>
+                                        <th>
+                                            @Html.DisplayFor(p => material.Quantity)
+                                        </th>
+                                    </tr>
                                     }
-                                }
-                            </table>
+                                </table>
+                            }
+                                    
                         </td>
                     </tr>
                 }
