--- a/StockManager/Views/TailorChalanSend/Edit.cshtml
+++ b/StockManager/Views/TailorChalanSend/Edit.cshtml
@@ -32,7 +32,7 @@
                 <div class="row">
                     <div class="col-md-2">
                         <div class="form-group">
-                            <label>Invoice #</label>
+                            <label>Chalan #</label>
                             @Html.EditorFor(model => model.ChalanNo, new { htmlAttributes = new { @class = "form-control", @id = "ChalanNo" } })
                             @Html.ValidationMessageFor(model => model.ChalanNo, "", new { @class = "text-danger ChalanNoVal" })
                         </div>
