Dashboard and Header Changes

--- a/StockManager/Views/Dashboard/_CustomerSupport.cshtml
+++ b/StockManager/Views/Dashboard/_CustomerSupport.cshtml
@@ -1,4 +1,4 @@
-﻿<div class="portlet light ">
+﻿<div class="portlet light " style="display:none">
     <div class="portlet-title">
         <div class="caption caption-md">
             <i class="icon-bar-chart font-dark hide"></i>
