--- a/StockManager/Views/Dashboard/_Feeds.cshtml
+++ b/StockManager/Views/Dashboard/_Feeds.cshtml
@@ -1,5 +1,5 @@
 ﻿<!-- BEGIN PORTLET-->
-<div class="portlet light ">
+<div class="portlet light" style="display:none">
     <div class="portlet-title tabbable-line">
         <div class="caption">
             <i class="icon-globe font-dark hide"></i>
