--- a/StockManager/Views/Report/ProductWiseStock.cshtml
+++ b/StockManager/Views/Report/ProductWiseStock.cshtml
@@ -25,34 +25,34 @@
                     <th>
                         Product Name
                     </th>
-                    <th>
+                    <th style="width: 8%;word-wrap:break-word;">
                         Unit
                     </th>
-                    <th>
+                    <th style="width: 8%;word-wrap:break-word;">
                         Opening Stock
                     </th>
-                    <th>
+                    <th style="width: 8%;word-wrap:break-word;">
                         Total Purchase
                     </th>
-                    <th>
+                    <th style="width: 8%;word-wrap:break-word;">
                         Issued to Printer
                     </th>
-                    <th>
+                    <th style="width: 8%;word-wrap:break-word;">
                         Shrinkage
                     </th>
-                    <th>
+                    <th style="width: 8%;word-wrap:break-word;">
                         Received from Printer
                     </th>
-                    <th>
+                    <th style="width: 8%;word-wrap:break-word;">
                         Issued to Fabricator
                     </th>
-                    <th>
+                    <th style="width: 8%;word-wrap:break-word;">
                         Received from Fabricator
                     </th>
-                    <th>
+                    <th style="width: 8%;word-wrap:break-word;">
                         Total Sales
                     </th>
-                    <th>
+                    <th style="width: 8%;word-wrap:break-word;">
                         Stock In Hand
                     </th>
                 </tr>
