--- a/StockManager/Views/Shared/dashboard/topnav.cshtml
+++ b/StockManager/Views/Shared/dashboard/topnav.cshtml
@@ -56,17 +56,6 @@
         </div>
         <!-- BEGIN PAGE TOP -->
         <div class="page-top">
-            <form class="search-form search-form-expanded" action="page_general_search_3.html" method="GET">
-                <div class="input-group">
-                    <input type="text" class="form-control" placeholder="Search..." name="query">
-                    <span class="input-group-btn">
-                        <a href="javascript:;" class="btn submit">
-                            <i class="icon-magnifier"></i>
-                        </a>
-                    </span>
-                </div>
-            </form>
-            
             <!-- BEGIN COMPANY INFORMATION -->
             <div id="companyDetails">
                 <h4 style="margin-bottom: 0;">@Session["CompanyName"]</h4>
@@ -100,6 +89,31 @@
                     </li>
                     <!-- END USER LOGIN DROPDOWN -->
                 </ul>
+                <ul class="nav navbar-nav pull-right">
+                    <!-- BEGIN USER LOGIN DROPDOWN -->
+                    <!-- DOC: Apply "dropdown-dark" class after below "dropdown-extended" to change the dropdown styte -->
+                    <li class="dropdown dropdown-user">
+                        <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-close-others="true">
+                            
+                            <span class="username username-hide-on-mobile"> @Session["CompanyName"] </span>
+                            <i class="fa fa-angle-down"></i>
+                        </a>
+                        <ul class="dropdown-menu dropdown-menu-default">
+                            <li>
+                                <a href="@Url.Action("profile","Users")">
+                                    <i class="icon-user"></i> Company 2
+                                </a>
+                            </li>
+                            <li>
+                                <a href="@Url.Action("Logout", "Users")">
+                                    <i class="icon-key"></i> Company 3
+                                </a>
+                            </li>
+                        </ul>
+                    </li>
+                    <!-- END USER LOGIN DROPDOWN -->
+                </ul>
+                
             </div>
             <!-- END TOP NAVIGATION MENU -->
         </div>
